manifests/bluechat-prod/name-blue-prod.yml
#Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: bluechat-prod
  annotations:
    linkerd.io/inject: enabled
