manifests/bluechat-prod/bluechat-deploy-prod.yml
#Service DB
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: bluechat-prod
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - name: db-port
      protocol: TCP
      port: 3306
      targetPort: 3306

---

#Deploy DB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  namespace: bluechat-prod
spec:
  replicas: 1
  template:
    metadata:
        name: db
        labels:
          app: db
    spec:
      containers:
      - name: bluechat-db
        image: jonfarias/bluechat-db:1
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        #volumeMounts:
        #  - mountPath: "/var/lib/mysql"
        #    name: db-disk
        ports:
        - containerPort: 3306
  selector:
    matchLabels:
      app: db

---

#Service Bluechat
apiVersion: v1
kind: Service
metadata:
  name: bluechat
  namespace: bluechat-prod
spec:
  type: ClusterIP
  selector:
    app: bluechat
  ports:
  - name: http
    port: 80
    targetPort: 5000

---
#Deploy Bluechat
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluechat-deploy
  namespace: bluechat-prod
spec:
  replicas: 1
  template:
    metadata:
        name: bluechat
        labels:
          app: bluechat
    spec:
      containers:
      - name: bluechat-container
        image: jonfarias/bluechat-web:0.1.269
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
  selector:
    matchLabels:
      app: bluechat
