manifests/bluechat-prod/bluechat-deploy.yml
#Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: bluechat-prod
---
#Service Bluechat
apiVersion: v1
kind: Service
metadata:
  name: bluechat
  namespace: bluechat-prod
spec:
  type: ClusterIP
  selector:
    app: bluechat
  ports:
  - name: http
    port: 80
    targetPort: 5000

---
#Deploy Bluechat
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluechat-deploy
  namespace: bluechat-prod
spec:
  replicas: 1
  template:
    metadata:
        name: bluechat
        labels:
          app: bluechat
    spec:
      containers:
      - name: bluechat-container
        image: jonfarias/bluechat-web:0.1.153
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
  selector:
    matchLabels:
      app: bluechat
